website/versioned_docs/version-0.0.4/api/core/core.md
---
id: version-0.0.4-core
title: core package
hide_title: true
original_id: core
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Core API Overview](overview) &gt; [@adpt/core](./core.md)

## core package

## Classes

|  Class | Description |
|  --- | --- |
|  [BuildNotImplemented](./core.buildnotimplemented.md) |  |
|  [Component](./core.component.md) |  |
|  [DeferredComponent](./core.deferredcomponent.md) |  |
|  [Observer](./core.observer.md) |  |
|  [ObserverNeedsData](./core.observerneedsdata.md) |  |
|  [PrimitiveComponent](./core.primitivecomponent.md) |  |
|  [ProjectBuildError](./core.projectbuilderror.md) |  |
|  [ProjectCompileError](./core.projectcompileerror.md) |  |
|  [ProjectRunError](./core.projectrunerror.md) |  |
|  [Style](./core.style.md) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [build(root, styles, options)](./core.build.md) |  |
|  [buildOnce(root, styles, options)](./core.buildonce.md) |  |
|  [childrenToArray(propsChildren)](./core.childrentoarray.md) |  |
|  [cloneElement(element, props, children)](./core.cloneelement.md) |  |
|  [concatStyles(styles)](./core.concatstyles.md) | Concatenate all of the rules of the given Style elements together into a single Style element that contains all of the rules. Always returns a new Style element and does not modify the Style element parameters. |
|  [createContext(defaultValue)](./core.createcontext.md) |  |
|  [createElement(ctor, props, children)](./core.createelement.md) |  |
|  [createStateStore(json)](./core.createstatestore.md) |  |
|  [deepFilterElemsToPublic(o)](./core.deepfilterelemstopublic.md) |  |
|  [defaultChildStatus(props, mgr, data)](./core.defaultchildstatus.md) |  |
|  [errorToNoStatus(err)](./core.errortonostatus.md) |  |
|  [findElementsInDom(stylesIn, dom)](./core.findelementsindom.md) |  |
|  [findPathsInDom(stylesIn, dom)](./core.findpathsindom.md) |  |
|  [gqlGetOriginalErrors(err)](./core.gqlgetoriginalerrors.md) |  |
|  [handle(name)](./core.handle.md) | User-facing API for creating a Handle |
|  [isApplyStyle(el)](./core.isapplystyle.md) |  |
|  [isDefaultKey(props)](./core.isdefaultkey.md) |  |
|  [isDeferredElement(val)](./core.isdeferredelement.md) |  |
|  [isElement(val)](./core.iselement.md) |  |
|  [isHandle(val)](./core.ishandle.md) |  |
|  [isMountedElement(val)](./core.ismountedelement.md) |  |
|  [isPrimitiveElement(elem)](./core.isprimitiveelement.md) |  |
|  [isReady(h, e)](./core.isready.md) |  |
|  [mergeDefaultChildStatus(props, parentStatus, mgr, data, transformParentStatus)](./core.mergedefaultchildstatus.md) |  |
|  [noStatusOnError(f)](./core.nostatusonerror.md) |  |
|  [registerObserver(obs, nameIn)](./core.registerobserver.md) |  |
|  [rule(override)](./core.rule.md) |  |
|  [ruleNoRematch(info, elem)](./core.rulenorematch.md) | User API function that can be used in a style rule build function to mark the props of the passed in element such that the rule associated with the info parameter will not match against the specified element.<!-- -->This works by copying the set of all rules that have already matched successfully against the original element (origElement) specified in the info parameter onto the passed in elem. Returns the passed in elem as a convenience. Does not create a new element. |
|  [serializeDom(root, options)](./core.serializedom.md) |  |
|  [stack(stackName, root, style)](./core.stack.md) |  |
|  [throwObserverErrors(results)](./core.throwobservererrors.md) |  |
|  [useContext(context)](./core.usecontext.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AdaptElement](./core.adaptelement.md) | An Adapt Element is an instance of an Adapt component. |
|  [AdaptMountedElement](./core.adaptmountedelement.md) |  |
|  [AdaptPrimitiveElement](./core.adaptprimitiveelement.md) |  |
|  [AnyProps](./core.anyprops.md) |  |
|  [AnyState](./core.anystate.md) |  |
|  [BuildData](./core.builddata.md) |  |
|  [BuildHelpers](./core.buildhelpers.md) |  |
|  [BuiltinProps](./core.builtinprops.md) |  |
|  [Children](./core.children.md) |  |
|  [Context](./core.context.md) |  |
|  [ExecutedQuery](./core.executedquery.md) |  |
|  [GenericInstance](./core.genericinstance.md) |  |
|  [GenericInstanceMethods](./core.genericinstancemethods.md) |  |
|  [Handle](./core.handle.md) |  |
|  [NoStatus](./core.nostatus.md) |  |
|  [ObserverPlugin](./core.observerplugin.md) |  |
|  [ObserverResponse](./core.observerresponse.md) |  |
|  [SFC](./core.sfc.md) |  |
|  [StateStore](./core.statestore.md) |  |
|  [Status](./core.status.md) |  |
|  [StyleBuildInfo](./core.stylebuildinfo.md) |  |
|  [WithChildren](./core.withchildren.md) |  |

## Namespaces

|  Namespace | Description |
|  --- | --- |
|  [Adapt](./core.adapt.md) |  |
|  [internal](./core.internal.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [gql](./core.gql.md) |  |
|  [isFinalDomElement](./core.isfinaldomelement.md) |  |
|  [isPartialFinalDomElement](./core.ispartialfinaldomelement.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [AdaptElementOrNull](./core.adaptelementornull.md) |  |
|  [BuildOutput](./core.buildoutput.md) |  |
|  [DeployOpID](./core.deployopid.md) |  |
|  [DomPath](./core.dompath.md) |  |
|  [ElementPredicate](./core.elementpredicate.md) |  |
|  [FinalDomElement](./core.finaldomelement.md) |  |
|  [ObserveForStatus](./core.observeforstatus.md) |  |
|  [PartialFinalDomElement](./core.partialfinaldomelement.md) |  |
|  [PropsType](./core.propstype.md) |  |
|  [SFCBuildProps](./core.sfcbuildprops.md) | Helper type for declaring the props available to use \*\*inside\*\* the body of your function component. |
|  [SFCDeclProps](./core.sfcdeclprops.md) | Helper type for declaring the props argument of a function component. (The type that users of your component will see.) |
